<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CreateShoppingListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_shop"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/Theme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_background"
            android:orientation="vertical"
            android:padding="@dimen/create_spnglist_content_padding">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="@dimen/card_view_elevation"
                app:cardCornerRadius="@dimen/card_view_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/card_view_layout_content_padding">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_shop_image"
                        android:layout_width="@dimen/shop_image_size"
                        android:layout_height="@dimen/shop_image_size"
                        android:layout_marginTop="@dimen/add_screen_shop_image_marginTop"
                        android:background="@drawable/shape_image_view_border"
                        android:padding="@dimen/add_screen_place_image_padding"
                        android:scaleType="centerCrop"
                        android:src="@drawable/add_screen_image_placeholder"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_location"/>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/create_spnglist_til_marginTop">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_shop_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name_shop"
                            android:inputType="text"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/create_spnglist_til_marginTop">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_shop_descrioption"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/description_shop"
                            android:inputType="text"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/create_spnglist_til_marginTop">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_shop_radius"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/radius_shop"
                            android:inputType="number"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/create_spnglist_til_marginTop">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/et_shop_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/location_shop"
                            android:inputType="text"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_create_shop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/create_spnglist_btn_marginTop"
                        android:background="@drawable/shape_button_rounded"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:paddingTop="@dimen/btn_paddingTopBottom"
                        android:paddingBottom="@dimen/btn_paddingTopBottom"
                        android:text="@string/create"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/btn_text_size" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
</LinearLayout>